# src/swagger.json
@@ -210,6 +210,49 @@
           }
         }
       }
+    },
+    "/services/list": {
+      "get": {
+        "tags": [
+          "Attendants"
+        ],
+        "summary": "List all services",
+        "description": "List all services",
+        "security":[
+          {"bearerAuth": []}
+        ],
+        "responses": {
+          "200": {
+            "description": "Success",
+            "content": {
+              "application/json": {
+                "type": "array",
+                "items": {
+                  "type": "object",
+                  "properties": {
+                    "name": {
+                      "type": "string",
+                      "example": "Restauração"
+                    },
+                    "value": {
+                      "type": "number",
+                      "example": 50.40
+                    },
+                    "time": {
+                      "type": "number",
+                      "example": 12
+                    },
+                    "percentage": {
+                      "type": "number",
+                      "example": 8
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
     }
   },
   "definitions":{
